# sbnAnomalyDetection

./: .gitignore  GNN_ARCHITECTURE.md  GNN_QUICK_REFERENCE.md  GNN_WORKFLOW.md  README.md  pyproject.toml  requirements.txt  run_multi_branch_inference.py
ablation/tpc/: ablation_summary.csv
ablation/tpc/baseline_all/: training_history.csv
ablation/tpc/minus_hits0_h_integral/: training_history.csv
ablation/tpc/minus_hits0_h_sumadc/: training_history.csv
ablation/tpc/minus_hits0_h_time/: training_history.csv
ablation/tpc/minus_hits0_h_width/: training_history.csv
configs/: SBNDTPCChannelMap_v2_with_positions.csv  default.yaml  fusion_train.yaml  gnn.yaml  pmt_train.yaml  tpc.yaml  tpc_train.yaml  window_train.yaml
data/: README.md  availableRuns.json  build_tpc_features_from_root.py  filelist_test.txt  filelist_train.txt  makeTrainTestFilelist.py
sbn_anomaly/data/: __init__.py  collate.py  dataset.py  graph_window_dataset.py  graph_window_dataset_pyg.py  materialize_windows.py  root_files.py  sparse_window_dataset.py  stream_dataset.py  streaming.py
sbn_anomaly/infer/: cli.py  inferrer.py  multi_branch.py
sbn_anomaly/models/: __init__.py  gnn_forecaster.py  gnn_forecaster_pyg.py
sbn_anomaly/train/: ablation.py  cli.py  fusion_trainer.py  gnn_trainer.py  pmt_trainer.py  tpc_trainer.py  trainer.py  window_trainer.py
sbn_anomaly/utils/: __init__.py  geometry.py  logging.py  plotting.py
scripts/: run_fusion.sh  run_pmt.sh  run_tpc.sh  run_window.sh
src/sbn_anomaly_detection/: __init__.py
tests/: test_ablation.py  test_data.py  test_infer.py  test_models.py  test_stream_dataset.py  test_train.py
(+17 files in other folders)
